--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "postcss-global-nested",
-  "description": "[🚧 WIP] Wrap styles into :global like postcss-nested does it but for unstandard :global selector",
+  "description": "Wrap styles into :global like postcss-nested does it but for unstandard :global selector",
   "main": "src/index.js",
   "scripts": {
-    "test": "ava"
+    "test": "ava",
+    "preversion": "npm test",
+    "postversion": "git push && git push --tags && npm publish"
   },
   "devDependencies": {
     "ava": "^0.22.0",
